@@ -26,6 +26,7 @@ plugins {
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'org.springframework.boot' version '2.6.4'
   id 'com.github.ben-manes.versions' version '0.41.0'
+  id 'com.github.hmcts.rse-cft-lib' version '0.14.2'
   id 'hmcts.ccd.sdk' version '0.27.2'
 }
 
@@ -55,10 +56,6 @@ sourceSets {
       srcDir file('src/integrationTest/java')
     }
   }
-  cftlib {
-    compileClasspath += sourceSets.main.output
-    runtimeClasspath += sourceSets.main.output
-  }
 }
 
 
@@ -82,8 +79,8 @@ configurations {
   functionalTestRuntime.extendsFrom testRuntime
   integrationTestImplementation.extendsFrom testImplementation
   integrationTestRuntime.extendsFrom testRuntime
-  cftlibImplementation.extendsFrom implementation
-  cftlibRuntimeOnly.extendsFrom runtimeOnly
+  cftlibTestImplementation.extendsFrom testImplementation
+  cftlibTestRuntime.extendsFrom testRuntime
 }
 
 tasks.withType(JavaCompile) {
@@ -221,10 +218,6 @@ dependencyManagement {
       entry 'guava'
     }
   }
-  // TODO - fix in the CFT lib by publishing platform information.
-  imports {
-    mavenBom 'com.fasterxml.jackson:jackson-bom:2.13.2'
-  }
 }
 
 repositories {
@@ -320,7 +313,6 @@ dependencies {
   functionalTestImplementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
   functionalTestImplementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.2'
 
-  cftlibImplementation 'com.github.hmcts:rse-cft-lib:0.10.2'
 }
 
 mainClassName = 'uk.gov.hmcts.divorce.CaseApiApplication'
@@ -407,24 +399,18 @@ ccd {
   configDir = file('build/definitions')
 }
 
-task bootWithCcd(type: org.springframework.boot.gradle.tasks.run.BootRun, dependsOn: [loadEnvSecrets, buildCCDXlsx], group: 'ccd tasks') {
-    classpath sourceSets.cftlib.runtimeClasspath
-    mainClass = 'uk.gov.hmcts.divorce.cftlib.RunWithCFT'
-    doFirst() {
-      // Required by Access Management for Java 17.
-      // https://github.com/x-stream/xstream/issues/101
-      ['java.lang', 'java.util', 'java.lang.reflect', 'java.text', 'java.awt.font'].each {
-        jvmArgs('--add-opens', "java.base/${it}=ALL-UNNAMED")
-      }
-      jvmArgs('--add-opens', 'java.desktop/java.awt.font=ALL-UNNAMED')
-      jvmArgs('-XX:ReservedCodeCacheSize=64m')
+tasks.cftlibTest.dependsOn buildCCDXlsx
+check.dependsOn cftlibTest
 
-      project.file('./.aat-env').readLines().each() {
-        def index = it.indexOf("=")
-        def key = it.substring(0, index)
-        def value = it.substring(index + 1)
-        environment key, value
-      }
+bootWithCCD {
+    dependsOn(loadEnvSecrets, buildCCDXlsx)
+
+    doFirst() {
+        project.file('./.aat-env').readLines().each() {
+            def index = it.indexOf("=")
+            def key = it.substring(0, index)
+            def value = it.substring(index + 1)
+            environment key, value
+        }
     }
 }
-
